bug and log fixes