@@ -5,4 +5,5 @@ title WatameBot
 set logLevel=info
 set tokenLocation=config/token.txt
 
-java -DLOG_LEVEL=%logLevel% -jar "watamebot.jar" -token %tokenLocation%
+java -DLOG_LEVEL=%logLevel% -p "watamebot.jar;lib;plugins" --add-modules ALL-MODULE-PATH -m watamebot/net.foxgenesis.watame.Main -token %tokenLocation%
+pause
